web/profiles/custom/yalesites_profile/modules/custom/ys_ai_chat/react/src/pages/chat/Chat.module.css
.container {
    flex: 1;
    display: flex;
    flex-direction: column;
    gap: 20px;
}

.chatRoot {
    flex: 1;
    display: flex;
    margin-top: 0px;
    margin-bottom: 20px;
    margin-left: 20px;
    margin-right: 20px;
    gap: 5px;
}

.chatContainer {
    flex: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
    overflow-y: auto;
    max-height: calc(100vh - 100px);
    background-color: #FFFFFF;
}

.chatEmptyState {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.chatEmptyStateTitle {
    font-style: normal;
    font-weight: 700;
    font-size: 2rem;
    display: flex;
    align-items: flex-end;
    text-align: center;
    line-height: 24px;
    margin-top: 36px;
    margin-bottom: 0px;
}

.chatEmptyStateSubtitle {
    margin-top: 20px;
    font-style: normal;
    font-weight: 400;
    font-size: 1rem;
    line-height: 150%;
    display: flex;
    align-items: flex-end;
    text-align: center;
    letter-spacing: -0.01em;
    color: #616161;
}

.chatIcon {
    height: 62px;
    width: 62px;
}

.chatMessageStream {
    flex-grow: 1;
    width: 100%;
    overflow-y: auto;
    padding-left: 24px;
    padding-right: 24px;
    display: flex;
    flex-direction: column;
    margin-top: 24px;
    justify-content: flex-end;
    background-color: #FFFFFF;
    border-bottom: 1px solid #222;
}

.chatMessageUser {
    display: flex;
    justify-content: flex-end;
    margin-bottom: 12px;
}

.chatMessageUserMessage {
    padding: 2rem 3rem;
    background: #FFFFFF;
    font-style: normal;
    font-weight: 400;
    font-size: 1.4rem;
    line-height: 1.2;
    color: #5E5E5E;
    flex: none;
    order: 0;
    flex-grow: 0;
    white-space: pre-wrap;
    word-wrap: break-word;
    max-width: 800px;
    border: 1px solid #5E5E5E;
    position: relative;
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
    gap: 1rem;
}

.chatMessageUserMessageWrap {
    flex: 1 auto;
}

.chatMessageUserMessageAvatar {
    flex: 0 auto;
    width: 2.5rem;
    height: 2.5rem;
}

.chatMessageGpt {
    margin-bottom: 12px;
    max-width: 80%;
    display: flex;
}

.chatMessageError {
    padding: 20px;
    /* background: #EDF5FD; */
    box-shadow: rgba(182, 52, 67, 1) 1px 1px 2px, rgba(182, 52, 67, 1) 0px 0px 1px;
    
    color: #242424;
    flex: none;
    order: 0;
    flex-grow: 0;
    
    max-width: 800px;
    /* filter: drop-shadow(rgba(182, 52, 67, 1) 1px 1px 2px) drop-shadow(rgba(182, 52, 67, 1) 0px 0px 1px); */
}

.chatMessageErrorContent {
    font-family: "Segoe UI";
    font-style: normal;
    font-weight: 400;
    font-size: 1rem;
    line-height: 1;
    white-space: pre-wrap;
    word-wrap: break-word;
    gap: 12px;
    align-items: center;
}

.chatInput {
    display: block;
    position: sticky;
    flex: 0 0 100px;
    padding-top: 12px;
    padding-bottom: 24px;
    padding-left: 24px;
    padding-right: 24px;
    width: 100%;
    /* max-width: calc(100% - 100px); */
    /* max-width: 1028px; */
    /* margin-bottom: 50px; */
    margin-top: 8px;
    background-color: #F7F7F7;
    min-height: 10rem;
}

.clearChatBroom {
    box-sizing: border-box;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    position: absolute;
    width: 40px;
    height: 40px;
    left: 7px;
    top: 13px;
    color: #FFFFFF;
    border: 1px solid #D1D1D1;
    z-index: 1;
}

.clearChatBroomNoCosmos {
    box-sizing: border-box;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    position: absolute;
    width: 40px;
    height: 40px;
    left: 7px;
    top: 66px;
    color: #FFFFFF;
    border: 1px solid #D1D1D1;
    z-index: 1;
}

.newChatIcon {
    box-sizing: border-box;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    position: absolute;
    width: 40px;
    height: 40px;
    left: 7px;
    top: 66px;
    color: #FFFFFF;
    border: 1px solid #D1D1D1;
    z-index: 1;
}

.stopGeneratingContainer {
    box-sizing: border-box;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    padding: 1rem 2rem;
    gap: 4px;
    position: absolute;
    width: 200px;
    height: 32px;
    left: calc(50% - 161px/2 + 25.8px);
    bottom: 116px;
    border: 1px solid hsl(0, 0%, 13%);
}

.stopGeneratingIcon {
    width: 14px;
    height: 14px;
    color: #424242;
}

.stopGeneratingText {
    width: auto;
    height: 20px;
    font-style: normal;
    font-weight: 600;
    font-size: 1rem;
    line-height: 1;
    display: flex;
    align-items: center;
    color: #242424;
    flex: none;
    order: 0;
    flex-grow: 0;
}

.citationPanel {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding: 16px 16px;
    gap: 8px;
    background: #FFFFFF;
    flex: auto;
    order: 0;
    align-self: stretch;
    flex-grow: 0.3;
    max-width: 30%;
    overflow-y: scroll;
    max-height: calc(100vh - 100px);
}

.citationPanelHeaderContainer {
    width: 100%;
}

.citationPanelHeader {
    font-style: normal;
    font-weight: 600;
    font-size: 1rem;
    line-height: 1;
    color: #000000;
    flex: none;
    order: 0;
    flex-grow: 0;
}

.citationPanelDismiss {
    width: 18px;
    height: 18px;
    color: #424242;
}

.citationPanelDismiss:hover {
    background-color: #D1D1D1;
    cursor: pointer;
}

.citationPanelTitle {
    font-style: normal;
    font-weight: 600;
    font-size: 1rem;
    line-height: 1;
    color: #323130;
    margin-top: 12px;
    margin-bottom: 12px;
} 

.citationPanelTitle:hover {
    text-decoration: underline;
    cursor: pointer;
}

.citationPanelContent {
    font-style: normal;
    font-weight: 400;
    font-size: 1rem;
    line-height: 1;
    color: #000000;
    flex: none;
    order: 1;
    align-self: stretch;
    flex-grow: 0;
} 

a {
    padding-left: 5px;
    padding-right: 5px;
}

.viewSourceButton {
    font-style: normal;
    font-weight: 600;
    font-size: 1rem;
    line-height: 1;
    color: #115EA3;
    flex-direction: row;
    align-items: center;
    padding: 4px 6px;
    gap: 4px;
    border: 1px solid #D1D1D1;
}

.viewSourceButton:hover {
    text-decoration: underline;
    cursor: pointer;
}

